--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
     "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-module-alias": "^1.6.0",
     "babel-preset-env": "^1.7.0",
     "rollup": "^0.63.4",
-    "rollup-plugin-babel": "^3.0.7"
+    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-replace": "^2.0.0"
   }
 }
